--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-pdf": "^10.0.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.1",
+    "recharts": "^3.6.0",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.8.1"
   },
